--- a/02_selectors/index.html
+++ b/02_selectors/index.html
@@ -10,7 +10,10 @@
  	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-	
+	<div></div>
+	<div class="myne"></div>
+	<div id="myid"></div>
+	<div class="coolClass mine"></div>
 	<script src="JS/script.js"></script>
 </body>
 </html>
