--- a/practice_3/index.html
+++ b/practice_3/index.html
@@ -11,7 +11,7 @@
     </header>
     <main class="content">
       <div class="imageBlock">
-        <img src="https://thumbs.dreamstime.com/b/unknown-businessman-avatar-profile-picture-black-white-illustration-35616527.jpg">
+        <img id="img" src="https://thumbs.dreamstime.com/b/unknown-businessman-avatar-profile-picture-black-white-illustration-35616527.jpg">
         <p class="shortBio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur eius fugiat incidunt consectetur blanditiis excepturi dolorum quia rerum atque minima. Quos repudiandae tempore quia odit quibusdam iusto iste mollitia ipsum?</p>
       </div>
     </main>
