--- a/обьекты,массивы,условные операторы/index.html
+++ b/обьекты,массивы,условные операторы/index.html
@@ -10,7 +10,7 @@
  	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-	
+	<div></div>
 	<script src="JS/script.js"></script>
 </body>
 </html>
