--- a/button/index.html
+++ b/button/index.html
@@ -10,7 +10,8 @@
  	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-	
+	<button>Show</button>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos similique harum error explicabo doloribus, veniam, odio repellendus exercitationem earum quisquam consequatur, facilis vero magnam voluptatem ullam labore, suscipit quo ab.</p>
 	<script src="JS/script.js"></script>
 </body>
 </html>
