--- a/context/index.html
+++ b/context/index.html
@@ -10,8 +10,7 @@
  	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-	<button class="button">Show</button>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos similique harum error explicabo doloribus, veniam, odio repellendus exercitationem earum quisquam consequatur, facilis vero magnam voluptatem ullam labore, suscipit quo ab.</p>
+	<button>hi</button>
 	<script src="JS/script.js"></script>
 </body>
 </html>
