--- a/27_XMLHTTPRequest/index.html
+++ b/27_XMLHTTPRequest/index.html
@@ -10,7 +10,14 @@
  	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-	
+	<form >
+		<label for="city_temp"> city_temp</label>
+		<input type="text" name="city_temp">
+		<input type="submit" value="Рассчитать">
+	</form>
+	<div class="result">
+		<h2>Результат:<span class="total"></span></h2>
+	</div>
 	<script src="JS/script.js"></script>
 </body>
 </html>
